Tweaked some style and added trash can icon

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ button{
     height: 40px;
     padding: 12px 20px;
 
-    outline: 2px solid #475569;
+    border: 2px solid #475569;
 
     align-self: flex-end;
 
@@ -44,7 +44,7 @@ button{
 }
 
 button:hover{
-    outline: 2px solid #cbd5e1;
+    border: 2px solid #cbd5e1;
 }
 
 .library{
@@ -72,20 +72,23 @@ tbody tr:nth-child(even){
     background-color: #e2e8f0;
 }
 
-th.title{
+.title{
     width: 35%;
 }
 
-th.author{
+.author{
     width: 30%;
 }
 
-th.pages{
+.pages{
     width: 15%;
+    text-align: right;
 }
 
-th.read{
+.read, 
+.remove{
     width: 10%;
+    text-align: center;
 }
 
 #add-book-modal{
@@ -107,7 +110,6 @@ th.read{
     padding: 30px;
     border-radius: 10px;
     background-color: #e2e8f0;
-    height: 50vh;
     display: grid;
     grid-template-columns: 75px 250px;
     grid-auto-rows: 30px;
@@ -115,7 +117,6 @@ th.read{
     align-content: center;
     row-gap: 14px;
     column-gap: 20px;
-    top: calc(50vh - 200px);
 }
 
 .new-book h1{
