--- a/src/components/styles/login.module.css
+++ b/src/components/styles/login.module.css
@@ -1,11 +1,7 @@
 .buttons {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 12px;
 
-}
-
-.buttons button {
-  font-size: 14px;
-  width: 150px;
 }
